# EternalAstroboxPlugins

./: .gitignore  CLAUDE.md  Cargo.toml  DIFF.md  INTERCONNECT_API.md  README.md  base.mdx  manifest.json  notice.mdx  program.md  qweather.mdx
plugin-dev/: index.mdx  meta.json
plugin-dev/framework/: arch.md  meta.json  runtime.md
plugin-dev/general/: apilevel.md  manifest.md  meta.json  wasi-version.md  wit-files.md
plugin-dev/getstarted/: language.md  meta.json  rust.mdx
plugin-dev/host-api/: device.md  dialog.md  event.md  i18n.md  interconnect.md  meta.json  os.md  queue.md  register.md  thirdpartyapp.md  timer.md  transport.md  ui-v3.md  ui.md  watchface.md
release/: EternalAstroboxV2Plugin.wasm  manifest.json
scripts/: build_dist.py
src/ui/: api_client.rs  build.rs  event_handler.rs  icons.rs  state.rs
